# cli-ai

./: README.md  pyproject.toml
ai/: __main__.py  main.py
ai/models/: __init__.py  translate.py
monkfish_cli/: __main__.py
