[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["misrab <monkfish328@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
ai = "ai.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
